--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Client Testimonials</span></h1>
+               <!-- <h1><span>Client Testimonials</span></h1> -->
 
             </div>
 
@@ -626,7 +626,7 @@
 
                   <ul class="slides">
 
-                     <li>
+                     <!-- <li> -->
                         <blockquote>
                            <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
                            to do what you believe is great work. And the only way to do great work is to love what you do.
@@ -634,7 +634,7 @@
                            </p>
                            <cite>Steve Jobs</cite>
                         </blockquote>
-                     </li> <!-- slide ends -->
+                     <!-- </li> --> <!-- slide ends -->
 
 
                   </ul>
