--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 <!-- 			</div> --> <!-- main-col end -->
 
       <!-- </div> --> <!-- End skills -->
-<!-- 
-   </section> --> <!-- Resume Section End-->
+
+   </section> <!-- Resume Section End-->
 
 
    <!-- Portfolio Section
