--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="./TwoColResume.pdf" download="resume" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="./resume.pdf" download="resume" class="button"><i class="fa fa-download"></i>Download Resume</a>
                      <a href="#contact" class="button button2 smoothscroll"><i class="fa fa-button "><strong style="font-size: 16px">Want to have a 'geeky' talk?</strong></i></a>
 
                   </p>
